--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "docs": "yuidoc ."
   },
   "dependencies": {
-    "pngjs-image": "~0.11.5",
+    "pngjs-image": "git://github.com/lukasz-si/pngjs-image.git#master",
     "preceptor-core": "~0.10.0",
     "promise": "6.0.0"
   },
